--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -949,6 +949,9 @@
     <ClCompile Include="src\batattacktransformother.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\transformotherhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2392,6 +2395,9 @@
     </ClInclude>
     <ClInclude Include="include\batattacktransformother.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\transformotherhooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
