--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -952,6 +952,9 @@
     <ClCompile Include="src\transformotherhooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\drainlevelhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
     <ClCompile Include="src\batattackdrainlevel.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -2400,6 +2403,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\transformotherhooks.h">
+      <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\drainlevelhooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
     <ClInclude Include="include\batattackdrainlevel.h">
