--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -958,6 +958,9 @@
     <ClCompile Include="src\batattackdrainlevel.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\batattackuntransformeffect.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2409,6 +2412,9 @@
       <Filter>hooks</Filter>
     </ClInclude>
     <ClInclude Include="include\batattackdrainlevel.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\batattackuntransformeffect.h">
       <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
