--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -174,6 +174,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batattacksummon.cpp" />
     <ClCompile Include="src\batattacktransformother.cpp" />
     <ClCompile Include="src\batattacktransformself.cpp" />
+    <ClCompile Include="src\batattackuntransformeffect.cpp" />
     <ClCompile Include="src\batattackutils.cpp" />
     <ClCompile Include="src\batimagesloader.cpp" />
     <ClCompile Include="src\battleattackinfo.cpp" />
@@ -487,6 +488,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batattacksummon.h" />
     <ClInclude Include="include\batattacktransformother.h" />
     <ClInclude Include="include\batattacktransformself.h" />
+    <ClInclude Include="include\batattackuntransformeffect.h" />
     <ClInclude Include="include\batattackutils.h" />
     <ClInclude Include="include\batimagesloader.h" />
     <ClInclude Include="include\batnotify.h" />
