--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -961,6 +961,9 @@
     <ClCompile Include="src\batattackuntransformeffect.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\untransformeffecthooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2416,6 +2419,9 @@
     </ClInclude>
     <ClInclude Include="include\batattackuntransformeffect.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\untransformeffecthooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
