Add CMidStreamEnvFile structure

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2426,6 +2426,9 @@
     <ClInclude Include="include\midgardstreamenv.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\midstreamenvfile.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\stdfileimpl.h">
       <Filter>game</Filter>
     </ClInclude>
