--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2435,6 +2435,9 @@
     <ClInclude Include="include\stdfileimpl.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\widgetinterf.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\functordispatch4.h">
       <Filter>game</Filter>
     </ClInclude>
