Add IMqRenderer2 structure and its vftable

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -772,6 +772,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqnetsystem.h" />
     <ClInclude Include="include\mqnettraffic.h" />
     <ClInclude Include="include\mqrect.h" />
+    <ClInclude Include="include\mqrenderer2.h" />
     <ClInclude Include="include\mqstream.h" />
     <ClInclude Include="include\mqtexture.h" />
     <ClInclude Include="include\mqthread.h" />
