--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2444,6 +2444,9 @@
     <ClInclude Include="include\mqrenderer2.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\mqtexturer2.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
