--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2453,6 +2453,9 @@
     <ClInclude Include="include\mqanimator2.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\rendertypes.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
