--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2459,6 +2459,9 @@
     <ClInclude Include="include\rendertypes.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\displaysettings.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
