--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2462,6 +2462,9 @@
     <ClInclude Include="include\mqrasterizer.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\surfacedecompressdata.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\displaysettings.h">
       <Filter>game</Filter>
     </ClInclude>
