--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -336,6 +336,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\modifierutils.cpp" />
     <ClCompile Include="src\mqrect.cpp" />
     <ClCompile Include="src\multilayerimg.cpp" />
+    <ClCompile Include="src\musicfader.cpp" />
     <ClCompile Include="src\musichooks.cpp" />
     <ClCompile Include="src\netcustomplayer.cpp" />
     <ClCompile Include="src\netcustomplayerclient.cpp" />
@@ -776,6 +777,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mquikernel.h" />
     <ClInclude Include="include\mquikernelsimple.h" />
     <ClInclude Include="include\multilayerimg.h" />
+    <ClInclude Include="include\musicfader.h" />
     <ClInclude Include="include\musichooks.h" />
     <ClInclude Include="include\netcustomplayer.h" />
     <ClInclude Include="include\netcustomplayerclient.h" />
