--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -551,7 +551,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\customattacks.h" />
     <ClInclude Include="include\customattackutils.h" />
     <ClInclude Include="include\d2color.h" />
-    <ClInclude Include="include\d2map.h" />
+    <ClInclude Include="include\mq_c_s.h" />
     <ClInclude Include="include\d2osexception.h" />
     <ClInclude Include="include\d2pair.h" />
     <ClInclude Include="include\d2string.h" />
