--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1011,7 +1011,7 @@
     <ClInclude Include="include\currency.h">
       <Filter>game</Filter>
     </ClInclude>
-    <ClInclude Include="include\d2map.h">
+    <ClInclude Include="include\mq_c_s.h">
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\d2pair.h">
