Define d2tree - std::_Tree<T> (ordered red-black tree)

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2429,6 +2429,9 @@
     <ClInclude Include="include\musicfader.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\d2tree.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
