Add CMainView2 structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -556,6 +556,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\d2color.h" />
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2tree.h" />
+    <ClInclude Include="include\mainview2.h" />
     <ClInclude Include="include\mq_c_s.h" />
     <ClInclude Include="include\d2osexception.h" />
     <ClInclude Include="include\d2pair.h" />
