--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2492,6 +2492,9 @@
     <ClInclude Include="include\texturehandle.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\mainview2.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
