--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -384,7 +384,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\stringintlist.cpp" />
     <ClCompile Include="src\subracecat.cpp" />
     <ClCompile Include="src\summonhooks.cpp" />
-    <ClCompile Include="src\targetslist.cpp" />
+    <ClCompile Include="src\targetset.cpp" />
     <ClCompile Include="src\targetslistutils.cpp" />
     <ClCompile Include="src\taskchangecolor.cpp" />
     <ClCompile Include="src\terraincat.cpp" />
@@ -865,7 +865,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\subracecat.h" />
     <ClInclude Include="include\summonhooks.h" />
     <ClInclude Include="include\surfacedecompressdata.h" />
-    <ClInclude Include="include\targetslist.h" />
+    <ClInclude Include="include\targetset.h" />
     <ClInclude Include="include\targetslistutils.h" />
     <ClInclude Include="include\task.h" />
     <ClInclude Include="include\taskbase.h" />
