Redefine TerrainNameList as Map

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -389,7 +389,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\taskchangecolor.cpp" />
     <ClCompile Include="src\terraincat.cpp" />
     <ClCompile Include="src\terraincountmap.cpp" />
-    <ClCompile Include="src\terrainnamelist.cpp" />
+    <ClCompile Include="src\terrainnamemap.cpp" />
     <ClCompile Include="src\testcondition.cpp" />
     <ClCompile Include="src\testconditionhooks.cpp" />
     <ClCompile Include="src\textboxinterf.cpp" />
@@ -877,7 +877,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\tasktilehighlight.h" />
     <ClInclude Include="include\terraincat.h" />
     <ClInclude Include="include\terraincountmap.h" />
-    <ClInclude Include="include\terrainnamelist.h" />
+    <ClInclude Include="include\terrainnamemap.h" />
     <ClInclude Include="include\testcondition.h" />
     <ClInclude Include="include\testconditionhooks.h" />
     <ClInclude Include="include\textandid.h" />
