--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -967,6 +967,9 @@
     <ClCompile Include="src\batbigface.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\mainview2.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
