Support grid toggle button in game

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -967,6 +967,9 @@
     <ClCompile Include="src\batbigface.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\mainview2hooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
     <ClCompile Include="src\mainview2.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -2494,6 +2497,9 @@
     </ClInclude>
     <ClInclude Include="include\targetset.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\mainview2hooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
