--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -286,6 +286,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\lordcat.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mainview2.cpp" />
+    <ClCompile Include="src\mainview2hooks.cpp" />
     <ClCompile Include="src\mapgen.cpp" />
     <ClCompile Include="src\mapgraphics.cpp" />
     <ClCompile Include="src\mapinterf.cpp" />
@@ -556,6 +557,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2tree.h" />
     <ClInclude Include="include\mainview2.h" />
+    <ClInclude Include="include\mainview2hooks.h" />
     <ClInclude Include="include\mq_c_s.h" />
     <ClInclude Include="include\d2osexception.h" />
     <ClInclude Include="include\d2pair.h" />
