--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -404,6 +404,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\uievent.cpp" />
     <ClCompile Include="src\uimanager.cpp" />
     <ClCompile Include="src\umattack.cpp" />
+    <ClCompile Include="src\ummodifier.cpp" />
     <ClCompile Include="src\umunit.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
