Add CustomModifiers feature file

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -225,6 +225,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\customattackhooks.cpp" />
     <ClCompile Include="src\customattacks.cpp" />
     <ClCompile Include="src\customattackutils.cpp" />
+    <ClCompile Include="src\custommodifiers.cpp" />
     <ClCompile Include="src\d2osexception.cpp" />
     <ClCompile Include="src\d2string.cpp" />
     <ClCompile Include="src\dbfaccess.cpp" />
@@ -559,6 +560,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\customattackhooks.h" />
     <ClInclude Include="include\customattacks.h" />
     <ClInclude Include="include\customattackutils.h" />
+    <ClInclude Include="include\custommodifiers.h" />
     <ClInclude Include="include\d2color.h" />
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2tree.h" />
