Define IUsStackLeaderApi::vftable

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -424,6 +424,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\untransformeffecthooks.cpp" />
     <ClCompile Include="src\ussoldierimpl.cpp" />
     <ClCompile Include="src\umattackhooks.cpp" />
+    <ClCompile Include="src\usstackleader.cpp" />
     <ClCompile Include="src\utils.cpp" />
     <ClCompile Include="src\version.cpp" />
     <ClCompile Include="src\visitors.cpp" />
