--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1000,6 +1000,9 @@
     <ClCompile Include="src\attack.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\usstackleader.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
