--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2513,6 +2513,9 @@
     <ClInclude Include="include\umunithooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
+    <ClInclude Include="include\isoground2.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\isoborder.h">
       <Filter>game</Filter>
     </ClInclude>
